<resources>
    <string name="app_name">PassaAonde?</string>
    <string name="title_activity_maps">Intinerário</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="bus_1">Ônibus 1</string>
    <string name="bus_2">Ônibus 2</string>
    <string name="bus_3">Ônibus 3</string>
    <string name="limpar_rotas">Limpar Rotas</string>
    <string name="onibus_1">Ônibus 1</string>
    <string name="onibus_2">Ônibus 2</string>
    <string name="onibus_3">Ônibus 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="rotas">Rotas</string>
    <string name="horarios">Horários</string>
    <string name="title_activity_intinerario">IntinerarioActivity</string>
</resources>
